@@ -1,3 +1,12 @@
+2006-02-01  Steffen Macke <Steffen_Macke@dorsch.com.jo>
+
+	* doc/en/dcsewerdesign.xml: Restructured FAQ
+	* doc/build.xml: Corrected default target
+
+2006-02-01  Dennis Vilovic <Dennis_Vilovic@dorsch.com.jo>
+
+	* doc/en/dcsewerdesign.xml: Added 
+
 2005-08-11  Steffen Macke <Steffen_Macke@dorsch.com.jo>
 
 	* build.xml: Write md5sum.txt
